--- a/Package.json
+++ b/Package.json
@@ -72,6 +72,7 @@
   	  	"prettier": "^3.3.3",
   	  	"react-router": "^6.26.0",
   	  	"react-router-dom": "^6.26.0",
+  	  	"rollup-plugin-terser": "^7.0.2",
   	  	"sass": "^1.77.8",
   	  	"serve-static": "^1.15.0",
   	  	"ts-node": "^10.9.2",
